--- a/dataset/bert.ipynb
+++ b/dataset/bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
+    "\n",
+    "# Preprocessing texts in dataset \n",
     "def clean_text(text):\n",
     "    if isinstance(text, str):\n",
     "        text = re.sub(r'http\\S+', '', text) # Remove URLs\n",
@@ -57,13 +59,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read data and train test split\n",
     "data = pd.read_csv('all_data.csv')\n",
     "data['cleaned_text'] = data['comment_text'].apply(clean_text)\n",
-    "# make label binary 1 and 0 first\n",
+    "\n",
+    "# make label binary 1 and 0 first for toxicity\n",
     "data['is_toxic'] = (data['toxicity'] >= 0.5).astype(int)\n",
     "\n",
     "X = data['cleaned_text']\n",
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\CasKei\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\tokenization_utils_base.py:2645: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
+      "c:\\Users\\chong\\anaconda3\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:2645: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
       "  warnings.warn(\n"
      ]
     }
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,6 +143,7 @@
     }
    ],
    "source": [
+    "# cuda\n",
     "device = torch.device(\"cuda\")\n",
     "device\n",
     "import torch\n",
@@ -147,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,18 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# freeze parameters (?)\n",
+    "# freeze parameters\n",
     "for param in bert.parameters():\n",
     "    param.requires_grad = False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\CasKei\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\optimization.py:429: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "c:\\Users\\chong\\anaconda3\\Lib\\site-packages\\transformers\\optimization.py:429: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n"
      ]
     },
@@ -312,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11964,6 +11969,251 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BERT_Arch(\n",
+       "  (bert): BertModel(\n",
+       "    (embeddings): BertEmbeddings(\n",
+       "      (word_embeddings): Embedding(30522, 768, padding_idx=0)\n",
+       "      (position_embeddings): Embedding(512, 768)\n",
+       "      (token_type_embeddings): Embedding(2, 768)\n",
+       "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "    )\n",
+       "    (encoder): BertEncoder(\n",
+       "      (layer): ModuleList(\n",
+       "        (0-11): 12 x BertLayer(\n",
+       "          (attention): BertAttention(\n",
+       "            (self): BertSelfAttention(\n",
+       "              (query): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (key): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (value): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (dropout): Dropout(p=0.1, inplace=False)\n",
+       "            )\n",
+       "            (output): BertSelfOutput(\n",
+       "              (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "              (dropout): Dropout(p=0.1, inplace=False)\n",
+       "            )\n",
+       "          )\n",
+       "          (intermediate): BertIntermediate(\n",
+       "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
+       "          )\n",
+       "          (output): BertOutput(\n",
+       "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "            (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (pooler): BertPooler(\n",
+       "      (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "      (activation): Tanh()\n",
+       "    )\n",
+       "  )\n",
+       "  (dropout): Dropout(p=0.1, inplace=False)\n",
+       "  (relu): ReLU()\n",
+       "  (fc1): Linear(in_features=768, out_features=512, bias=True)\n",
+       "  (fc2): Linear(in_features=512, out_features=2, bias=True)\n",
+       "  (softmax): LogSoftmax(dim=1)\n",
+       ")"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch \n",
+    " \n",
+    "# save tagged_data \n",
+    "# with open('tagged_data.pickle', 'wb') as handle: \n",
+    "#     pickle.dump(tagged_data, handle, protocol=pickle.HIGHEST_PROTOCOL) \n",
+    " \n",
+    "# open and load tags from pickle file \n",
+    "model = BERT_Arch(bert)\n",
+    "# model = BERT_Arch(*args, **kwargs)\n",
+    "model.load_state_dict(torch.load('saved_weights2.pt'))\n",
+    "model.eval()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Evaluating...\n",
+      "  Batch    50  of  6,249.\n",
+      "  Batch   100  of  6,249.\n",
+      "  Batch   150  of  6,249.\n",
+      "  Batch   200  of  6,249.\n",
+      "  Batch   250  of  6,249.\n",
+      "  Batch   300  of  6,249.\n",
+      "  Batch   350  of  6,249.\n",
+      "  Batch   400  of  6,249.\n",
+      "  Batch   450  of  6,249.\n",
+      "  Batch   500  of  6,249.\n",
+      "  Batch   550  of  6,249.\n",
+      "  Batch   600  of  6,249.\n",
+      "  Batch   650  of  6,249.\n",
+      "  Batch   700  of  6,249.\n",
+      "  Batch   750  of  6,249.\n",
+      "  Batch   800  of  6,249.\n",
+      "  Batch   850  of  6,249.\n",
+      "  Batch   900  of  6,249.\n",
+      "  Batch   950  of  6,249.\n",
+      "  Batch 1,000  of  6,249.\n",
+      "  Batch 1,050  of  6,249.\n",
+      "  Batch 1,100  of  6,249.\n",
+      "  Batch 1,150  of  6,249.\n",
+      "  Batch 1,200  of  6,249.\n",
+      "  Batch 1,250  of  6,249.\n",
+      "  Batch 1,300  of  6,249.\n",
+      "  Batch 1,350  of  6,249.\n",
+      "  Batch 1,400  of  6,249.\n",
+      "  Batch 1,450  of  6,249.\n",
+      "  Batch 1,500  of  6,249.\n",
+      "  Batch 1,550  of  6,249.\n",
+      "  Batch 1,600  of  6,249.\n",
+      "  Batch 1,650  of  6,249.\n",
+      "  Batch 1,700  of  6,249.\n",
+      "  Batch 1,750  of  6,249.\n",
+      "  Batch 1,800  of  6,249.\n",
+      "  Batch 1,850  of  6,249.\n",
+      "  Batch 1,900  of  6,249.\n",
+      "  Batch 1,950  of  6,249.\n",
+      "  Batch 2,000  of  6,249.\n",
+      "  Batch 2,050  of  6,249.\n",
+      "  Batch 2,100  of  6,249.\n",
+      "  Batch 2,150  of  6,249.\n",
+      "  Batch 2,200  of  6,249.\n",
+      "  Batch 2,250  of  6,249.\n",
+      "  Batch 2,300  of  6,249.\n",
+      "  Batch 2,350  of  6,249.\n",
+      "  Batch 2,400  of  6,249.\n",
+      "  Batch 2,450  of  6,249.\n",
+      "  Batch 2,500  of  6,249.\n",
+      "  Batch 2,550  of  6,249.\n",
+      "  Batch 2,600  of  6,249.\n",
+      "  Batch 2,650  of  6,249.\n",
+      "  Batch 2,700  of  6,249.\n",
+      "  Batch 2,750  of  6,249.\n",
+      "  Batch 2,800  of  6,249.\n",
+      "  Batch 2,850  of  6,249.\n",
+      "  Batch 2,900  of  6,249.\n",
+      "  Batch 2,950  of  6,249.\n",
+      "  Batch 3,000  of  6,249.\n",
+      "  Batch 3,050  of  6,249.\n",
+      "  Batch 3,100  of  6,249.\n",
+      "  Batch 3,150  of  6,249.\n",
+      "  Batch 3,200  of  6,249.\n",
+      "  Batch 3,250  of  6,249.\n",
+      "  Batch 3,300  of  6,249.\n",
+      "  Batch 3,350  of  6,249.\n",
+      "  Batch 3,400  of  6,249.\n",
+      "  Batch 3,450  of  6,249.\n",
+      "  Batch 3,500  of  6,249.\n",
+      "  Batch 3,550  of  6,249.\n",
+      "  Batch 3,600  of  6,249.\n",
+      "  Batch 3,650  of  6,249.\n",
+      "  Batch 3,700  of  6,249.\n",
+      "  Batch 3,750  of  6,249.\n",
+      "  Batch 3,800  of  6,249.\n",
+      "  Batch 3,850  of  6,249.\n",
+      "  Batch 3,900  of  6,249.\n",
+      "  Batch 3,950  of  6,249.\n",
+      "  Batch 4,000  of  6,249.\n",
+      "  Batch 4,050  of  6,249.\n",
+      "  Batch 4,100  of  6,249.\n",
+      "  Batch 4,150  of  6,249.\n",
+      "  Batch 4,200  of  6,249.\n",
+      "  Batch 4,250  of  6,249.\n",
+      "  Batch 4,300  of  6,249.\n",
+      "  Batch 4,350  of  6,249.\n",
+      "  Batch 4,400  of  6,249.\n",
+      "  Batch 4,450  of  6,249.\n",
+      "  Batch 4,500  of  6,249.\n",
+      "  Batch 4,550  of  6,249.\n",
+      "  Batch 4,600  of  6,249.\n",
+      "  Batch 4,650  of  6,249.\n",
+      "  Batch 4,700  of  6,249.\n",
+      "  Batch 4,750  of  6,249.\n",
+      "  Batch 4,800  of  6,249.\n",
+      "  Batch 4,850  of  6,249.\n",
+      "  Batch 4,900  of  6,249.\n",
+      "  Batch 4,950  of  6,249.\n",
+      "  Batch 5,000  of  6,249.\n",
+      "  Batch 5,050  of  6,249.\n",
+      "  Batch 5,100  of  6,249.\n",
+      "  Batch 5,150  of  6,249.\n",
+      "  Batch 5,200  of  6,249.\n",
+      "  Batch 5,250  of  6,249.\n",
+      "  Batch 5,300  of  6,249.\n",
+      "  Batch 5,350  of  6,249.\n",
+      "  Batch 5,400  of  6,249.\n",
+      "  Batch 5,450  of  6,249.\n",
+      "  Batch 5,500  of  6,249.\n",
+      "  Batch 5,550  of  6,249.\n",
+      "  Batch 5,600  of  6,249.\n",
+      "  Batch 5,650  of  6,249.\n",
+      "  Batch 5,700  of  6,249.\n",
+      "  Batch 5,750  of  6,249.\n",
+      "  Batch 5,800  of  6,249.\n",
+      "  Batch 5,850  of  6,249.\n",
+      "  Batch 5,900  of  6,249.\n",
+      "  Batch 5,950  of  6,249.\n",
+      "  Batch 6,000  of  6,249.\n",
+      "  Batch 6,050  of  6,249.\n",
+      "  Batch 6,100  of  6,249.\n",
+      "  Batch 6,150  of  6,249.\n",
+      "  Batch 6,200  of  6,249.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.5457042670880419,\n",
+       " array([[-0.37266645, -1.1676246 ],\n",
+       "        [-0.404444  , -1.1006576 ],\n",
+       "        [-0.03181854, -3.463574  ],\n",
+       "        ...,\n",
+       "        [-1.7626473 , -0.18824708],\n",
+       "        [-0.11735379, -2.2006652 ],\n",
+       "        [-0.2812833 , -1.40574   ]], dtype=float32))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.to('cuda')\n",
+    "evaluate()"
+   ]
   }
  ],
  "metadata": {
@@ -11982,7 +12232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
