--- a/dataset/afterdoc2vec.ipynb
+++ b/dataset/afterdoc2vec.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n"
    ]
   },
   {
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,15 +66,24 @@
     "X = ''\n",
     "# open and load tags from pickle file\n",
     "with open('document_vectors.pickle', 'rb') as handle:\n",
-    "    b = pickle.load(handle)\n",
-    "\n",
-    "# combined files with the word embeddings and labels\n",
-    "combineddf = df['toxicity']\n"
+    "    X = pickle.load(handle)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combined files with the word embeddings and labels\n",
+    "# y = df['toxicity']\n",
+    "y = np.where(df['toxicity']>=0.5, 1, 0)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,21 +91,29 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "X_validation, X_test, y_validation, y_test = train_test_split(_temp, y_temp, test_size=0.5, random_state=42)\n"
+    "X_validation, X_test, y_validation, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9185104425062015\n"
+     ]
+    }
+   ],
    "source": [
     "# Prepare data\n",
-    "X = [doc2vec_model.infer_vector(doc.words) for doc in tagged_data]\n",
-    "y = [doc.tags[0] for doc in tagged_data]\n",
+    "# X = [doc2vec_model.infer_vector(doc.words) for doc in tagged_data]\n",
+    "# y = [doc.tags[0] for doc in tagged_data]\n",
     "\n",
-    "# Split data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# # Split data into training and testing sets\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Train logistic regression classifier\n",
     "logreg_classifier = LogisticRegression()\n",
