--- a/dataset/bert.ipynb
+++ b/dataset/bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,14 @@
     "import torch.nn as nn\n",
     "from sklearn.metrics import classification_report\n",
     "import transformers\n",
-    "from transformers import AutoModel, BertTokenizerFast\n"
+    "from transformers import AutoModel, BertTokenizerFast\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,8 +132,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -152,21 +159,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normalization\n",
+    "scalar = MinMaxScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## convert lists to tensors\n",
     "\n",
-    "train_seq = torch.tensor(tokens_train['input_ids']).to(device)\n",
+    "train_seq = torch.tensor(scalar.fit_transform(tokens_train['input_ids'])).to(device)\n",
     "train_mask = torch.tensor(tokens_train['attention_mask']).to(device)\n",
     "train_y = torch.tensor(y_train.tolist()).to(device)\n",
     "\n",
-    "val_seq = torch.tensor(tokens_val['input_ids']).to(device)\n",
+    "val_seq = torch.tensor(scalar.fit_transform(tokens_val['input_ids'])).to(device)\n",
     "val_mask = torch.tensor(tokens_val['attention_mask']).to(device)\n",
     "val_y = torch.tensor(y_validation.tolist()).to(device)\n",
     "\n",
-    "test_seq = torch.tensor(tokens_test['input_ids']).to(device)\n",
+    "test_seq = torch.tensor(scalar.fit_transform(tokens_test['input_ids'])).to(device)\n",
     "test_mask = torch.tensor(tokens_test['attention_mask']).to(device)\n",
     "test_y = torch.tensor(y_test.tolist()).to(device)\n",
     "\n"
@@ -174,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,13 +215,19 @@
     "# sampler for sampling the data during training\n",
     "val_sampler = SequentialSampler(val_data)\n",
     "\n",
-    "# dataLoader for validation set\n",
-    "val_dataloader = DataLoader(val_data, sampler = val_sampler, batch_size=batch_size)\n"
+    "# wrap tensors\n",
+    "test_data = TensorDataset(test_seq, test_mask, test_y)\n",
+    "\n",
+    "# sampler for sampling the data during training\n",
+    "test_sampler = SequentialSampler(test_data)\n",
+    "\n",
+    "# dataLoader for testidation set\n",
+    "test_dataloader = DataLoader(test_data, sampler = test_sampler, batch_size=batch_size)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,12 +424,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# function for evaluating the model\n",
-    "def evaluate():\n",
+    "def evaluate(dataloader):\n",
     "    \n",
     "    print(\"\\nEvaluating...\")\n",
     "  \n",
@@ -419,7 +442,7 @@
     "    total_preds = []\n",
     "\n",
     "    # iterate over batches\n",
-    "    for step,batch in enumerate(val_dataloader):\n",
+    "    for step,batch in enumerate(dataloader):\n",
     "        \n",
     "        # Progress update every 50 batches.\n",
     "        if step % 50 == 0 and not step == 0:\n",
@@ -428,7 +451,7 @@
     "            # elapsed = format_time(time.time() - t0)\n",
     "            \n",
     "            # Report progress.\n",
-    "            print('  Batch {:>5,}  of  {:>5,}.'.format(step, len(val_dataloader)))\n",
+    "            print('  Batch {:>5,}  of  {:>5,}.'.format(step, len(dataloader)))\n",
     "\n",
     "        # push the batch to gpu\n",
     "        batch = [t.to(device) for t in batch]\n",
@@ -451,7 +474,7 @@
     "            total_preds.append(preds)\n",
     "\n",
     "    # compute the validation loss of the epoch\n",
-    "    avg_loss = total_loss / len(val_dataloader) \n",
+    "    avg_loss = total_loss / len(dataloader) \n",
     "\n",
     "    # reshape the predictions in form of (number of samples, no. of classes)\n",
     "    total_preds  = np.concatenate(total_preds, axis=0)\n",
@@ -11979,7 +12002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -12035,7 +12058,7 @@
        ")"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12057,7 +12080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -12191,29 +12214,61 @@
       "  Batch 6,150  of  6,249.\n",
       "  Batch 6,200  of  6,249.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(0.5457042670880419,\n",
-       " array([[-0.37266645, -1.1676246 ],\n",
-       "        [-0.404444  , -1.1006576 ],\n",
-       "        [-0.03181854, -3.463574  ],\n",
-       "        ...,\n",
-       "        [-1.7626473 , -0.18824708],\n",
-       "        [-0.11735379, -2.2006652 ],\n",
-       "        [-0.2812833 , -1.40574   ]], dtype=float32))"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "model.to('cuda')\n",
-    "evaluate()"
+    "loss, tt_preds = evaluate(test_dataloader)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.073747   -0.13434753]\n",
+      " [-0.7725483  -0.61958945]\n",
+      " [-0.29789892 -1.3562554 ]\n",
+      " ...\n",
+      " [-0.12222891 -2.1623516 ]\n",
+      " [-0.03088112 -3.4930108 ]\n",
+      " [-0.35752735 -1.2019867 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tt_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1, device='cuda:0')\n",
+      "[-0.54296535 -0.86993873]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_y[22])\n",
+    "print(tt_preds[22])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
