--- a/dataset/doc2vec.ipynb
+++ b/dataset/doc2vec.ipynb
@@ -21,8 +21,7 @@
     "from sklearn import utils\n",
     "import gensim\n",
     "from gensim.models.doc2vec import TaggedDocument\n",
-    "import re\n",
-    "     "
+    "import re"
    ]
   },
   {
@@ -220,8 +219,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
