todo bin, preprocess?

--- a/dataset/afterdoc2vec.ipynb
+++ b/dataset/afterdoc2vec.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -18,8 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Combine labels with the all data including which is train which is split (or just train test split manually)\n",
-    "then send it to train\n"
+    "## Load document vectors from `dataprocessing` ipynb"
    ]
   },
   {
@@ -93,6 +99,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Test Split"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -103,6 +116,13 @@
     "\n",
     "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "X_validation, X_test, y_validation, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TRAIN LOGISTIC REGRESSION"
    ]
   },
   {
@@ -193,6 +213,13 @@
     "\n",
     "print(y_test[:30])\n",
     "print(y_pred[:30])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save model"
    ]
   },
   {
