--- a/dataset/datapreprocessing.ipynb
+++ b/dataset/datapreprocessing.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Processing for Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -43,6 +50,13 @@
     "df = pd.read_csv('all_data.csv')\n",
     "\n",
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A bit useless"
    ]
   },
   {
@@ -252,6 +266,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -272,6 +293,13 @@
     "\n",
     "# cleaned = df['comment_text'].apply(clean_text)\n",
     "# cleaned\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Delete rows to 'balance' the dataset"
    ]
   },
   {
@@ -345,12 +373,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the processed data as a new csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "data.to_csv('cleaned_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tokenization"
    ]
   },
   {
@@ -397,6 +439,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the tokenized data as a pickle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -411,6 +460,13 @@
     "# open and load tags from pickle file\n",
     "with open('tagged_data.pickle', 'rb') as handle:\n",
     "    tagged_data = pickle.load(handle)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Doc2Vec training"
    ]
   },
   {
@@ -436,6 +492,13 @@
     "#     print(\"Document\", i+1, \":\", doc)\n",
     "#     print(\"Vector:\", document_vectors[i])\n",
     "#     print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save trained document vectors"
    ]
   },
   {
