futile attempt to include model in param for functions

--- a/dataset/bert.ipynb
+++ b/dataset/bert.ipynb
@@ -534,10 +534,10 @@
    "outputs": [],
    "source": [
     "# function to train the model\n",
-    "def train():\n",
+    "def train(model):\n",
     "    \n",
     "    model.train()\n",
-    "    # total_loss, total_accuracy = 0, 0\n",
+    "    total_loss, total_accuracy = 0, 0\n",
     "  \n",
     "    # empty list to save model predictions\n",
     "    total_preds=[]\n",
@@ -589,7 +589,7 @@
     "    total_preds  = np.concatenate(total_preds, axis=0)\n",
     "\n",
     "    #returns the loss and predictions\n",
-    "    return avg_loss, total_preds\n"
+    "    return avg_loss, total_preds, model\n"
    ]
   },
   {
@@ -599,7 +599,7 @@
    "outputs": [],
    "source": [
     "# function for evaluating the model\n",
-    "def evaluate(dataloader):\n",
+    "def evaluate(dataloader, model):\n",
     "    \n",
     "    print(\"\\nEvaluating...\")\n",
     "  \n",
@@ -649,7 +649,7 @@
     "    # reshape the predictions in form of (number of samples, no. of classes)\n",
     "    total_val_preds  = np.concatenate(total_val_preds, axis=0)\n",
     "\n",
-    "    return avg_val_loss, total_val_preds"
+    "    return avg_val_loss, total_val_preds, model"
    ]
   },
   {
@@ -828,7 +828,7 @@
     "mse_loss  = nn.MSELoss() \n",
     "\n",
     "# define the optimizer\n",
-    "optimizer = AdamW(model.parameters(),lr = 1e-3)\n",
+    "optimizer = AdamW(model.parameters(),lr = 1e-5)\n",
     "\n",
     "#defining epochs\n",
     "epochs = 5\n",
@@ -854,7 +854,7 @@
     "    if epoch % 50 == 0:\n",
     "        print(f'Epoch {epoch+1}/{epochs}, Avg Loss: {total_loss/len(train_dataloader)}')\n",
     "    \n",
-    "    valid_loss, _ = evaluate(val_dataloader)\n",
+    "    valid_loss, _, model = evaluate(val_dataloader)\n",
     "    print(f'Validation Loss: {valid_loss:.3f}')\n",
     "    "
    ]
@@ -3520,7 +3520,7 @@
    ],
    "source": [
     "model.to('cuda')\n",
-    "loss, tt_preds = evaluate(test_dataloader)"
+    "loss, tt_preds, model = evaluate(test_dataloader)"
    ]
   },
   {
