--- a/dataset/bert.ipynb
+++ b/dataset/bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,13 +654,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\CasKei\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\optimization.py:429: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "  warnings.warn(\n",
       "C:\\Users\\CasKei\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\nn\\modules\\loss.py:535: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  return F.mse_loss(input, target, reduction=self.reduction)\n"
      ]
@@ -1111,7 +1113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Avg Loss: 0.18587047393530187\n",
+      "Epoch 1/5, Avg Loss: 0.18586769249590523\n",
       "\n",
       "Evaluating...\n",
       "  Batch    50  of  2,682.\n",
@@ -3158,14 +3160,14 @@
     "    if epoch % 50 == 0:\n",
     "        print(f'Epoch {epoch+1}/{epochs}, Avg Loss: {total_loss/len(train_dataloader)}')\n",
     "    \n",
-    "    valid_loss, _ = evaluate(val_dataloader)\n",
+    "    valid_loss, _, model = evaluate(val_dataloader, model)\n",
     "    print(f'Validation Loss: {valid_loss:.3f}')\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3219,7 +3221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3245,7 +3247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3265,7 +3267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -3340,12 +3342,12 @@
    ],
    "source": [
     "model.to('cuda')\n",
-    "loss, tt_preds, model = evaluate(test_dataloader)"
+    "loss, tt_preds, model = evaluate(test_dataloader, model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -3403,7 +3405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -3426,7 +3428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -3445,7 +3447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
