--- a/dataset/kcUsesBert.ipynb
+++ b/dataset/kcUsesBert.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -48,12 +48,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make predictions with new input text, you can tokenise the text using BERT tokeniser and pass it through the loaded model."
+    "To make predictions with new input text, you can tokenise the text using BERT tokeniser and pass it through the loaded model.\n",
+    "\n",
+    "Function takes input text, tokenises it, and passes the tokenised input through the loaded model.\n",
+    "Returns the predicted class and probability of input being toxic."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +71,62 @@
     "        probabilities = torch.softmax(logits, dim=1)\n",
     "        predicted_class = torch.argmax(probabilities, dim=1)\n",
     "        \n",
-    "    return predicted_class.item(), probabilities[0][1].item()"
+    "        toxicity_score = probabilities[0][1].item() * 100\n",
+    "        \n",
+    "    return predicted_class.item(), toxicity_score"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOW USE IT ON SOME INPUT TEXT!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: 1, Toxicity score: 83.69%\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"I hate you\"\n",
+    "predicted_class, toxicity_score = predict_toxicity(text)\n",
+    "print(f'Predicted class: {predicted_class}, Toxicity score: {toxicity_score:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: 0, Toxicity score: 5.32%\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"\"\n",
+    "predicted_class, toxicity_score = predict_toxicity(text)\n",
+    "print(f'Predicted class: {predicted_class}, Toxicity score: {toxicity_score:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
