--- a/dataset/kcUsesBert.ipynb
+++ b/dataset/kcUsesBert.ipynb
@@ -85,33 +85,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: 1, Toxicity score: 83.69%\n"
+      "Predicted class: 0, Toxicity score: 14.65%\n"
      ]
     }
    ],
    "source": [
-    "text = \"I hate you\"\n",
+    "text = \"This one is just wish them luck\"\n",
     "predicted_class, toxicity_score = predict_toxicity(text)\n",
     "print(f'Predicted class: {predicted_class}, Toxicity score: {toxicity_score:.2f}%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: 0, Toxicity score: 5.32%\n"
+      "Predicted class: 0, Toxicity score: 21.19%\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Do i need to tell them how resistors work or what, a 5-year old aso can, just wish them luck\"\n",
+    "predicted_class, toxicity_score = predict_toxicity(text)\n",
+    "print(f'Predicted class: {predicted_class}, Toxicity score: {toxicity_score:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: 1, Toxicity score: 72.59%\n"
      ]
     }
    ],
@@ -119,6 +138,35 @@
     "text = \"\"\n",
     "predicted_class, toxicity_score = predict_toxicity(text)\n",
     "print(f'Predicted class: {predicted_class}, Toxicity score: {toxicity_score:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make function to do this\n",
+    "def scorethis(text):\n",
+    "    predicted_class, toxicity_score = predict_toxicity(text)\n",
+    "    print(f'Predicted class: {predicted_class}, Toxicity score: {toxicity_score:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: 1, Toxicity score: 99.57%\n"
+     ]
+    }
+   ],
+   "source": [
+    "scorethis(\"wtf\")"
    ]
   },
   {
