--- a/dataset/kcUsesBert.ipynb
+++ b/dataset/kcUsesBert.ipynb
@@ -123,19 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: 1, Toxicity score: 72.59%\n"
+      "Predicted class: 1, Toxicity score: 99.56%\n"
      ]
     }
    ],
    "source": [
-    "text = \"\"\n",
+    "text = \"fuck you\"\n",
     "predicted_class, toxicity_score = predict_toxicity(text)\n",
     "print(f'Predicted class: {predicted_class}, Toxicity score: {toxicity_score:.2f}%')"
    ]
@@ -154,19 +154,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: 1, Toxicity score: 99.57%\n"
+      "Predicted class: 0, Toxicity score: 20.43%\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
-    "scorethis(\"wtf\")"
+    "scorethis(\"thats an mlm spreader\")"
    ]
   },
   {
